--- a/Referencias.HTML
+++ b/Referencias.HTML
@@ -12,14 +12,16 @@
 
     <body>
         <div class="Menu">
-            <img class="Logo" src="cliente-unipar.png">
+            <img class="Logo" src="PNG/cliente-unipar.png">
         </div>
 
-        <br><br><br>
+        <br><br><br> 
 
         <h1>Referências</h1>
 
         <a href="https://wiki.inf.ufpr.br/computacao/doku.php?id=l:linguagens_de_programacao#:~:text=A%20primeira%20linguagem%20de%20programação%20foi%20criada%20por%20Ada%20Lovelace,e%20usadas%20para%20diferentes%20propósitos." target="_blank">Wiki do Departamento de Computação da UFPR</a>
+        <br>
+        <a href="https://pt.wikipedia.org/wiki/World_Wide_Web" target="_blank">Wiki do World Wide Web</a>
         <br>
         <a href="https://www.napratica.org.br/linguagem-de-programacao/" target="_blank">Na Prática - Linguagem de Programação</a>
         <br>
