--- a/Sobre.HTML
+++ b/Sobre.HTML
@@ -12,7 +12,7 @@
 
     <body>
         <div class="Menu">
-            <img class="Logo" src="cliente-unipar.png">
+            <img class="Logo" src="PNG/cliente-unipar.png">
         </div>
         <br><br><br>
         <h3>00254623 MARCELO RIALTO JUNIOR - 1° ADS</h3>
