--- a/TRABALHO.html
+++ b/TRABALHO.html
@@ -20,6 +20,8 @@
 <hr>
   <h1>A História da Linguagem de Programação</h1>
   <br>
+  <h2> Clique na bola para entrar em mais detalhes sobre a Linguagem. </h2>
+  <br>
   <ul>
     <li style="--accent-color:#41516C" onclick="AbrirAda()">
       <div class="date">1843</div>
